# IIC-ACBA

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  Makefile.in  README.md  analyzer.c  analyzer.cpp  applyfunction.c  applyfunction.h  b_greedy.cpp  batch_testing.sh  compare.py  configure  doFunctions.c  extract_input_info.sh  extract_output.info.sh  extract_output_info.sh  ficheiro.in  ficheiro.out  ficheiro.txt  long.c  medium.c  pearson.cpp  pearson.h  short.c  sonar-project.properties  sudo.sh  the_thing_that_does_the_thing.sh  weird_osx_wait_whats_going_on.c
Input/: b.in02  b.in03  b.in04  b.in05  b.in06  b.in07  b.in08  b.in09  b.in10  b.in11  b.in12  b.in13  b.in14  b.in15  b.in16  b.in17  b.in18  b.in19  b.in20  b.in21  b.in22  b.in23  b.in24  b.in25  b.in26
Parser/: cmdline.c  cmdline.ggo  cmdline.h  myApp.cmdline
SafeExec/: Makefile  error.cpp  error.h  main.c  main.cpp  safe.c  safeexec.c  safeexec.cpp  safeexec.h
Safeexec/: Makefile  error.c  safe.h  safeexec.c  safeexec.h
Safeexec/tests/: execute.sh  mle
apps_to_test/: b.cpp  b_25.cpp  b_75.cpp
src/Analyze/: analyzer.cpp
src/Function/: applyfunction.cpp  applyfunction.h  doFunctions.cpp  pearson.cpp  pearson.h
tests/: execute.sh
